<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/ic_launcher_iconapp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:textAlignment="center"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="17dp"
        android:textColor="@color/white"
        android:text="@string/tvPrincipal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:text="@string/tvPrincipal2"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/darkerGray"
        android:paddingVertical="18dp"
        android:text="@string/btnRegistro"
        android:textColor="@color/pink"
        android:textSize="28dp"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/darkerGray"
        android:paddingVertical="18dp"
        android:text="@string/btnInicio"
        android:textSize="28dp"
        app:cornerRadius="0dp" />
</LinearLayout>