<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginVertical="45dp"
            android:textSize="45dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNanniName"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/etNameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:background="@color/darkerGray"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="Nombre usuario"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNanniEmail"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:background="@color/darkerGray"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNanniPass"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/darkerGray"
            android:drawableRight="@drawable/password"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPassText"
            android:textColor="@color/white"
            android:layout_marginBottom="45dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNanniPassC"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/etPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:background="@color/darkerGray"
            android:drawableRight="@drawable/password"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="Confirmar contraseña"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/gray" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:text="@string/btnBack"
                android:textSize="18sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:text="@string/btnContinue"
                android:textSize="18sp"
                app:cornerRadius="0dp" />
        </TableRow>
    </LinearLayout>
</ScrollView>