<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLogin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="60dp"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tvNanniEmail"
        android:textColor="@color/white"
        android:textSize="25dp" />


    <EditText
        android:id="@+id/etParentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Correo electrónico"
        android:textColorHint="@color/gray"
        android:background="@color/darkerGray"
        android:padding="20dp"
        android:layout_marginBottom="45dp"
        android:textColor="@color/white"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tvNanniPass"
        android:textSize="25dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etParentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:padding="20dp"
        android:hint="Contraseña"
        android:textColorHint="@color/gray"
        android:background="@color/darkerGray"
        android:drawableRight="@drawable/password"
        android:layout_marginBottom="80dp"
        android:inputType="textPassword" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginHorizontal="8dp"
            app:cornerRadius="0dp"
            android:text="@string/btnBack" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/btnContinue"
            android:layout_marginHorizontal="8dp"
            app:cornerRadius="0dp" />

    </TableRow>

</LinearLayout>