<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".PrincipalParents">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/darkerPink">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="49dp"
                android:layout_height="56dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/darkerPink"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/tvNotification"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toEndOf="@id/imageButton2" />

            <ImageButton
                android:id="@+id/icono_derecha"
                android:layout_width="57dp"
                android:layout_height="60dp"
                android:background="@color/darkerPink"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/notification"
                tools:layout_editor_absoluteX="345dp"
                tools:layout_editor_absoluteY="4dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="35dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginVertical="20dp"
                    app:srcCompat="@drawable/pexels_moose_photos_1036623" />

                <TextView
                    android:id="@+id/tvNameNanni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tvUser1"
                    android:textAlignment="textStart"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/tvLocationNanni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tvLocatioon"
                    android:textAlignment="textStart"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvSalaryNanni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/tvSalario"
                    android:textAlignment="textStart"
                    android:textColor="@color/darkerPink"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="35dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginVertical="20dp"
                    app:srcCompat="@drawable/pexels_moose_photos_1036623" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tvUser2"
                    android:textAlignment="textStart"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tvLocatioon2"
                    android:textAlignment="textStart"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/tvSalario2"
                    android:textAlignment="textStart"
                    android:textColor="@color/darkerPink"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>